5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4359/executions/1670_1393.log
== TEST (2019-04-16 18:20:34) 
-- CODE:
Encomenda pesar ate 4999.9g, a empresa cobra $0.05
Encomenda pesar 5000,0g, a empresa cobra $ 0.04g e taxa de $60.00
print(int())
-- ERROR:
File "XXXX", line 1
    Encomenda pesar ate 4999.9g, a empresa cobra $0.05
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:21:18) 
-- CODE:
Encomenda pesar ate 4999.9g, a empresa cobra $0.05
Encomenda pesar 5000,0g, a empresa cobra $ 0.04g e taxa de $60.00
print(int(round()))
-- ERROR:
File "XXXX", line 1
    Encomenda pesar ate 4999.9g, a empresa cobra $0.05
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:22:20) 
-- CODE:
Encomenda 4999.9g, a empresa cobra $0.05
Encomenda  5000,0g, a empresa cobra $ 0.04g e taxa de $60.00
print(int(round()))
-- ERROR:
File "XXXX", line 1
    Encomenda 4999.9g, a empresa cobra $0.05
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:22:37) 
-- CODE:
Encomenda 4999.9g, a empresa cobra $0.05
Encomenda  5000,0g, a empresa cobra $ 0.04g e taxa de $60.00
print(int.round(x, 3)))
-- ERROR:
File "XXXX", line 1
    Encomenda 4999.9g, a empresa cobra $0.05
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:22:42) 
-- CODE:
Encomenda 4999.9g, a empresa cobra $0.05
Encomenda  5000,0g, a empresa cobra $ 0.04g e taxa de $60.00
print(int.round(x, 3))
-- ERROR:
File "XXXX", line 1
    Encomenda 4999.9g, a empresa cobra $0.05
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:25:51) 
-- CODE:
Encomenda 4999.9g, a empresa cobra $0.05
Encomenda  5000,0g, a empresa cobra $ 0.04g e taxa de $60.00
print(max(int()))
-- ERROR:
File "XXXX", line 1
    Encomenda 4999.9g, a empresa cobra $0.05
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:05) 
-- CODE:
Encomenda 4999.9g, a empresa cobra $0.05
Encomenda  5000,0g, a empresa cobra $ 0.04g e taxa de $60.00
print(max(int()))
-- ERROR:
File "XXXX", line 1
    Encomenda 4999.9g, a empresa cobra $0.05
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:27:25) 
-- CODE:
Encomenda 4999.9g, a empresa cobra $0.05
Encomenda  5000,0g, a empresa cobra $ 0.04g e taxa de $60.00
print(max(int()))
-- ERROR:
File "XXXX", line 1
    Encomenda 4999.9g, a empresa cobra $0.05
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:28:17) 
-- CODE:
Encomenda = 4999.9g, a empresa cobra = $0.05
Encomenda = 5000,0g, a empresa cobra = $ 0.04g e taxa de = $60.00
print(max(int()))
-- ERROR:
File "XXXX", line 1
    Encomenda = 4999.9g, a empresa cobra = $0.05
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:31:24) 
-- CODE:
4999.9g + 0.05

print(int(())
-- ERROR:
File "XXXX", line 1
    4999.9g + 0.05
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:21) 
-- CODE:
4999.9g por grama 0.05
5000.0g por grama 0.04
taxa fixa 60
print(int(abs())
-- ERROR:
File "XXXX", line 1
    4999.9g por grama 0.05
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:32) 
-- CODE:
4999.9g por grama 0.05
5000.0g por grama 0.04
taxa fixa 60
print(int(max())
-- ERROR:
File "XXXX", line 1
    4999.9g por grama 0.05
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:30) 
-- CODE:
4999.9g por grama 0.05
5000.0g por grama 0.04
taxa fixa 60
print(int())
-- ERROR:
File "XXXX", line 1
    4999.9g por grama 0.05
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:01) 
-- CODE:
4999.9g por grama 0.05
5000.0g por grama 0.04
taxa fixa 60
print(int,INPUT())
-- ERROR:
File "XXXX", line 1
    4999.9g por grama 0.05
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:46:25) 
-- CODE:
4999.9g por grama 0.05
5000.0g por grama 0.04
taxa fixa 60
print(int(input())
-- ERROR:
File "XXXX", line 1
    4999.9g por grama 0.05
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:21) 
-- CODE:
4999.9g por grama 0.05
5000.0g por grama 0.04
taxa fixa 60
print(int())
-- ERROR:
File "XXXX", line 1
    4999.9g por grama 0.05
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:54:08) 
-- CODE:
4999.9g por grama 0.05
5000.0g por grama 0.04
taxa fixa 60
print(input(int())
-- ERROR:
File "XXXX", line 1
    4999.9g por grama 0.05
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
